--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "prepare": "husky",
+    "lint": "eslint .",
+    "check": "npm run lint"
   },
   "dependencies": {
     "chanfana": "^2.6.3",
@@ -14,8 +17,12 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@types/node": "22.13.0",
     "@types/service-worker-mock": "^2.0.4",
+    "eslint-config-prettier": "^10.1.5",
+    "husky": "^9.1.7",
+    "typescript-eslint": "^8.36.0",
     "wrangler": "^4.24.0"
   }
 }
