--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,13 +36,13 @@ jobs:
       - name: Patch wrangler.jsonc with dynamic env
         run: |
           WORKER_NAME="${{ steps.env.outputs.worker_name }}"
-          echo "Deploying to release environment: $WORKER_NAME"
+          echo "Deploying to main environment: $WORKER_NAME"
 
           # Remove comments from JSONC to avoid jq parse errors
           grep -v '^\s*//' wrangler.jsonc > wrangler_clean.json
 
           # Inject new env block with main name, main entrypoint, and routes
-          jq ". + { env: { \"release\": { \"name\": \"$WORKER_NAME\", \"main\": \"./dist/_worker.js/index.js\" } } }" wrangler_clean.json > wrangler.jsonc
+          jq ". + { env: { \"main\": { \"name\": \"$WORKER_NAME\", \"main\": \"./dist/_worker.js/index.js\" } } }" wrangler_clean.json > wrangler.jsonc
 
       # https://github.com/marketplace/actions/deploy-to-cloudflare-workers-with-wrangler
       - name: Deploy to Cloudflare Workers
